--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ https://templatemo.com/tm-586-scholar
         <div class="col-lg-12 text-center">
           <div class="section-heading">
             <h2>INTERNSHIPS</h2>
-            <h6>Need certificates? Enroll in a free internship, complete assignments, and get certified!</h6>
+            <h6>Enroll in a free internship and get certified!</h6>
           </div>
         </div>
       </div>
