--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ https://templatemo.com/tm-586-scholar
         <div class="col-lg-5 align-self-center">
           <div class="section-heading">
             <h6>About Us</h6>
-            <h2>What make us the best internship platform?</h2>
+            <h2>The Best Internship Platform</h2>
             <p>Welcome to <b>BharatGIG</b>, a unique platform dedicated to providing internship certificates to students with basic knowledge in IT fields. We understand that gaining recognition for your skills can be challenging without formal internships. That's where BharatGIG steps in.</p>
             <div class="main-button">
               <a href="#internship">Discover Internship ></a>
